deployment-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-v1
  labels:
    app: auth-service
    version: v1
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: auth-service
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: auth-service
        version: v1
    spec:
      containers:
      - image: exxperiment899/walter-auth-service-istio:0.0.2-SNAPSHOT
        imagePullPolicy: Always
        name: auth-service
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth-service
  name: auth-service
  namespace: default
spec:
#  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: auth-service
  sessionAffinity: None
