deployment-putnici.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: putnici-resource-server
  name: putnici-resource-server
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: putnici-resource-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: putnici-resource-server
    spec:
      containers:
      - image: exxperiment899/putnici-resource-server-istio:0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: putnici-resource-server
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: putnici-resource-server
  name: putnici-resource-server
  namespace: default
spec:
#  type: LoadBalancer
  ports:
    - port: 8082
      protocol: TCP
      targetPort: 8082
  selector:
    app: putnici-resource-server
  sessionAffinity: None
