deployment-tura.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: tura-resource-server
  name: tura-resource-server
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 45
  selector:
    matchLabels:
      app: tura-resource-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: tura-resource-server
    spec:
      containers:
      - image: exxperiment899/tura-resource-server-istio:0.0.2-SNAPSHOT
        imagePullPolicy: IfNotPresent
        name: tura-resource-server
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels: #PODS
    app: tura-resource-server
  name: tura-resource-server
  namespace: default
spec:
#  type: LoadBalancer
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: tura-resource-server
  sessionAffinity: None
